# chatbox_osc

./: .gitignore  .gitlab-ci.yml  .releaserc.yml  CHANGELOG.md  LICENSE  MANIFEST.in  MIRROR.md  README.md  pyproject.toml
.gitlab/merge_request_templates/: Feature.md  Hotfix.md  Refactor.md
docs/: automodapi.py
docs/source/: conf.py  index.rst
src/chatbox_osc/: __init__.py  __main__.py  cli.py  main.py
tests/: conftest.py  test_chatbox_osc.py
